--- a/sample.bib
+++ b/sample.bib
@@ -1412,3 +1412,76 @@ url = {https://www.sciencedirect.com/science/article/pii/S0377221719308422},
 author = {Thibaut Vidal and Gilbert Laporte and Piotr Matl},
 keywords = {Transportation, Combinatorial optimization, Vehicle routing problem, Challenges and perspectives},
 }
+
+##### Pos round 1
+
+@Article{Modrak2024,
+AUTHOR = {Modrak, Vladimir and Sudhakarapandian, Ranjitharamasamy and Balamurugan, Arunmozhi and Soltysova, Zuzana},
+TITLE = {A Review on Reinforcement Learning in Production Scheduling: An Inferential Perspective},
+JOURNAL = {Algorithms},
+VOLUME = {17},
+YEAR = {2024},
+NUMBER = {8},
+ARTICLE-NUMBER = {343},
+URL = {https://www.mdpi.com/1999-4893/17/8/343},
+ISSN = {1999-4893},
+ABSTRACT = {In this study, a systematic review on production scheduling based on reinforcement learning (RL) techniques using especially bibliometric analysis has been carried out. The aim of this work is, among other things, to point out the growing interest in this domain and to outline the influence of RL as a type of machine learning on production scheduling. To achieve this, the paper explores production scheduling using RL by investigating the descriptive metadata of pertinent publications contained in Scopus, ScienceDirect, and Google Scholar databases. The study focuses on a wide spectrum of publications spanning the years between 1996 and 2024. The findings of this study can serve as new insights for future research endeavors in the realm of production scheduling using RL techniques.},
+DOI = {10.3390/a17080343}
+}
+
+
+@article{WANG2025,
+title = {The multi-depot pickup and delivery vehicle routing problem with time windows and dynamic demands},
+journal = {Engineering Applications of Artificial Intelligence},
+volume = {139},
+pages = {109700},
+year = {2025},
+issn = {0952-1976},
+doi = {https://doi.org/10.1016/j.engappai.2024.109700},
+url = {https://www.sciencedirect.com/science/article/pii/S095219762401858X},
+author = {Yong Wang and Mengyuan Gou and Siyu Luo and Jianxin Fan and Haizhong Wang},
+keywords = {Multi-depot pickup and delivery vehicle routing problem, Dynamic demands, Adaptive nondominated sorting genetic algorithm-II, Elite iterative mechanism, Artificial intelligence},
+abstract = {The rapid development of the urban logistics recycling industry, combined with the complexity of the pickup and delivery networks, has created a surge in dynamic customer demands and exacerbated the difficulty of logistics resource sharing. Accordingly, this work focuses on a multi-depot pickup and delivery vehicle routing problem with time windows and dynamic demands, which incorporates resource sharing. A bi-objective mathematical model is formulated to minimize the total operating cost and number of vehicles. A three-dimensional affinity propagation clustering and an adaptive nondominated sorting genetic algorithm-II are combined to find Pareto optimal solutions. A dynamic demand insertion strategy is proposed to determine the vehicle service sequences for dynamic situations. Combined with an elite iteration mechanism to prevent the proposed algorithm from falling into search stagnation and improve the convergence performance. The superiority of the proposed algorithm is verified by comparing with CPLEX solver (i.e., ILOG CPLEX Optimization Studio 12.10), multi-objective ant colony optimization, multi-objective particle swarm optimization, multi-objective evolutionary algorithm, multi-objective genetic algorithm, and decomposition-based multi-objective evolutionary algorithm with tabu search. Besides, the proposed model and algorithm are tested by a real-world case study in Chongqing city, China, and the further analysis indicates that significant improvement can be achieved. Furthermore, by incorporating the recognition and prediction techniques of artificial intelligence on dynamic demand data, the proposed approach can realize the self-optimization of multi-depot vehicle routes and the precise allocation of logistics resources in dynamic environments. This study is conducive to the construction of a digitally-intelligent urban logistics system.}
+}
+
+@article{JEONG2021,
+title = {A reinforcement learning model for material handling task assignment and route planning in dynamic production logistics environment},
+journal = {Procedia CIRP},
+volume = {104},
+pages = {1807-1812},
+year = {2021},
+note = {54th CIRP CMS 2021 - Towards Digitalized Manufacturing 4.0},
+issn = {2212-8271},
+doi = {https://doi.org/10.1016/j.procir.2021.11.305},
+url = {https://www.sciencedirect.com/science/article/pii/S2212827121012038},
+author = {Yongkuk Jeong and Tarun Kumar Agrawal and Erik Flores-García and Magnus Wiktorsson},
+keywords = {Type your keywords here, separated by semicolons},
+abstract = {The study analyzes the application of reinforcement learning (RL) for material handling tasks in Smart Production Logistics (SPL). It presents two contributions based on empirical results of a RL model in dynamic production logistics environment from the automotive industry. Firstly, an architecture integrating the use of RL in SPL. Secondly, the study defines various elements of RL (environment, value, state, reward, and policy) relevant for training and validating models in SPL. The study provides novel insight essential for manufacturing managers and extends current understanding related to research combining artificial intelligence and SPL, granting manufacturing companies a unique competitive advantage.}
+}
+
+@article{Erdem2025,
+author = {Ebru Erdem and Burak Erkayman and Tolga Aydin},
+year = {2025},
+title = {Advances in AI-Based Solutions for the Multi-Depot Vehicle Routing Problem: A Review of Recent Trends and Future Directions},
+joutnal = {Archives of Computational Methods in Engineering},
+abstract = {The Multi-Depot Vehicle Routing Problem (MDVRP) is a complex combinatorial optimization challenge that involves determining the most efficient routes for a fleet of vehicles operating from multiple depots while considering constraints such as capacity, time windows, and customer demands. Due to its NP-hard nature, MDVRP presents significant difficulties in finding optimal solutions. In recent years, artificial intelligence (AI) techniques, particularly metaheuristic algorithms inspired by natural processes and deep learning (DL) and reinforcement learning (RL) methods, have gained prominence for their ability to offer scalable and efficient solutions to MDVRP. Integrating hybrid approaches combining metaheuristics with DL has been especially noteworthy, providing enhanced solution quality and computational efficiency. Studies have shown that hybrid optimization strategies, such as clustering techniques with genetic algorithms (GAs), optimize customer assignments and overall route planning. This paper systematically reviews recent literature from the past ten years to identify common AI-based approaches for addressing MDVRP. It discusses potential directions for future research to advance the field further. Future research should focus on real-time data integration through IoT, which can create more dynamic and adaptive solutions. Additionally, AI methodologies, such as RL algorithms paired with metaheuristics, hold the potential for addressing larger, real-world MDVRP instances. Applying AI to practical domains like e-commerce logistics, health logistics, and emergency response has demonstrated significant operational improvements. Continued exploration of multi-objective optimization that balances cost, route balance, and energy efficiency is crucial for handling real-world complexities, including demand and capacity uncertainties.},
+issn = {1886-1784},
+url = {https://doi.org/10.1007/s11831-025-10356-y},
+doi = {10.1007/s11831-025-10356-y}
+}
+
+@Article{Arishi2023,
+journal={Journal of Management Analytics},
+author={Ali Arishi and Krishna Krishnan},
+title={A multi-agent deep reinforcement learning approach for solving the multi-depot vehicle routing problem},
+year={2023},
+month={July},
+pages={493-515},
+volume={10},
+number={3},
+abstract={ The multi-depot vehicle routing problem (MDVRP) is one of the most essential and useful variants of the traditional vehicle routing problem (VRP) in supply chain management (SCM) and logistics studies. Many supply chains (SC) choose the joint distribution of multiple depots to cut transportation costs and delivery times. However, the ability to deliver quality and fast solutions for MDVRP remains a challenging task. Traditional optimization approaches in operation research (OR) may not be practical to solve MDVRP in real-time. With the latest developments in artificial intelligence (AI), it becomes feasible to apply deep reinforcement learning (DRL) for solving combinatorial routing problems. This paper proposes a new multi-agent deep reinforcement learning (MADRL) model to solve MDVRP. Extensive experiments are conducted to evaluate the performance of the proposed approach. Results show that the developed MADRL model can rapidly capture relative information embedded in graphs and effectively produce quality solutions in real-time.},
+keywords={},
+doi={10.1080/23270012.2023.2229842},
+url={https://ideas.repec.org/a/taf/tjmaxx/v10y2023i3p493-515.html},
+}
+
