--- a/Main.tex
+++ b/Main.tex
@@ -913,11 +913,9 @@ Where $F_{best}$ represents the minimum TWT (total weighted tardiness of jobs de
 \subsection{Computational Results} %
 \label{subsec:ComputationalResults}
 
-%Initially, we compare the MILP model with PPO-VND, RVND, Framework, and the eight combinations of Neighborhood Search Heuristics (NSH 1, NSH 2, NSH 3, NSH 4, NSH 5, NSH 6, NSH 7, and NSH 8). For each instance, the PPO-VND and RVND algorithms were run five times; as the other methods are deterministic, they were only executed once. 
-
 This section presents a thorough and comprehensive computational analysis, clearly demonstrating the significant advancements achieved by our proposed methodologies compared to existing approaches. The evaluated methods include the proposed Mixed-Integer Linear Programming (MILP) model, the PPO-VND metaheuristic, the RVND metaheuristic, the machine-learning-driven Framework, and the eight Neighborhood Search Heuristics (NSH). Given the inherent stochastic nature of PPO-VND and RVND, each of these algorithms underwent five independent executions per instance, ensuring robustness and reliability of the reported results.
 
-Figures \ref{fig:grafico10}, \ref{fig:grafico15}, and \ref{fig:grafico30} illustrate a consistent increase in the average reward during PPO training, signifying the effective learning process of the Deep Reinforcement Learning (DRL) agents in addressing the chosen problem. Specifically, the orange graph in Figure \ref{fig:grafico10} represents the learning curve for instances with $n=10$ jobs. Figure \ref{fig:grafico10} demonstrates that the PPO algorithm achieves faster learning for smaller instances, with the reward stabilizing from approximately the first 100 thousand episodes onward. The blue and green graphs (Figures \ref{fig:grafico15} and \ref{fig:grafico30}, respectively) depict the learning curves for instances with $n=15$ and $n=30$ jobs. For these larger instances, it is evident that PPO exhibits greater difficulty in learning, requiring a higher number of episodes to stabilize the rewards. This indicates that the complexity of the instances directly correlates with the training time required for the PPO. Despite this increased training complexity, Table \ref{tab:Resultados} clearly shows the superior performance of PPO-VND when compared to other methods. Regarding training duration, PPO required approximately 16 hours for instances with $n=10$, around 74 hours for $n=15$, and approximately 45 days for $n=30$. It is important to note that the PPO model's training time was not factored into our performance comparisons, as training is a one-time process.
+Figures \ref{fig:grafico10}, \ref{fig:grafico15}, and \ref{fig:grafico30} illustrate a consistent increase in the average reward during PPO training, signifying the effective learning process of the Deep Reinforcement Learning (DRL) agents in addressing the chosen problem. Specifically, the orange graph in Figure \ref{fig:grafico10} represents the learning curve for instances with $n=10$ jobs. Figure \ref{fig:grafico10} demonstrates that the PPO algorithm achieves faster learning for smaller instances, with the reward stabilizing from approximately the first 100 thousand episodes onward. The blue and green graphs (Figures \ref{fig:grafico15} and \ref{fig:grafico30}, respectively) depict the learning curves for instances with $n=15$ and $n=30$ jobs. For these larger instances, it is evident that PPO exhibits greater difficulty in learning, requiring a higher number of episodes to stabilize the rewards. This indicates that the complexity of the instances directly correlates with the training time required for the PPO. In addition, the variability observed in the raw reward trajectories reveals that smaller instances (n = 10) exhibit lower standard deviation in the episode rewards, whereas larger instances (n = 15 and n = 30) show substantially higher dispersion. Despite this increased training complexity, Table \ref{tab:Resultados} clearly shows the superior performance of PPO-VND when compared to other methods. Regarding training duration, PPO required approximately 16 hours for instances with $n=10$, around 74 hours for $n=15$, and approximately 45 days for $n=30$. It is important to note that the PPO model's training time was not factored into our performance comparisons, as training is a one-time process.
 
 \begin{figure}[H]
     \centering
@@ -940,12 +938,9 @@ Figures \ref{fig:grafico10}, \ref{fig:grafico15}, and \ref{fig:grafico30} illust
     \end{subfigure}
     \caption{\textbf{Training evolution of the PPO agent for instance sizes (n = 10, 15, 30)}. Episode rewards are shown over 500,000 training steps, with solid curves indicating the smoothed learning trend and translucent lines depicting raw variability. Across all instance sizes, the agent shows consistent learning, with a rapid initial reward increase followed by stabilization as the policy converges.(Source: Authors' own work)}
     \label{fig:ppo_rewards_all}
-\end{figure}
+\end{figure} 
 
-%We performed an Analysis of Variance (ANOVA) ~\citep{zar1999biostatistical} for a significance level $5\%$. The ANOVA resulted in a p-value of $0.00$, indicating statistically significant differences between the experiments. Figure \ref{figura:boxplot} shows the boxplot for the GAPs obtained using all methods. 
-
-We rigorously confirmed the statistical significance of the performance disparities among algorithms using Analysis of Variance (ANOVA) \citep{zar1999biostatistical}. The resulting p-value was below 0.01, indicating highly significant differences. Figure \ref{figura:boxplot} visually highlights these performance discrepancies by clearly illustrating the distributions of GAPs across all methods. This visualization effectively emphasizes PPO-VND's consistently superior performance, especially in more challenging scenarios.
-
+We rigorously confirmed the statistical significance of the performance disparities among algorithms using Analysis of Variance (ANOVA) \citep{zar1999biostatistical}. The resulting p-value was below 0.01, indicating highly significant differences. Figure \ref{figura:boxplot} visually highlights these performance discrepancies by clearly illustrating the distributions of GAPs across all methods and further corroborate these findgins, as PPO-VND displays moderate variability, the Framework and MILP present comparatively lower dispersion, and the NSH heuristics exhibit considerably higher standard deviation values,. This visualization effectively emphasizes PPO-VND's consistently superior performance, especially in more challenging scenarios.
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.85\textwidth,scale=0.75]{Figure 9.pdf}
@@ -953,7 +948,7 @@ We rigorously confirmed the statistical significance of the performance disparit
     \label{figura:boxplot}
 \end{figure}
 
-Table \ref{tab:ResultadosNSH} provides the average GAPs for the eight Neighborhood Search Heuristics. Meanwhile, Table \ref{tab:Resultados} displays the average GAPs for the other algorithms discussed in this work. Each row in these tables presents the average GAPs across 60 instances, categorized by the number of jobs and machines. The smallest average GAPs are highlighted in bold. The final row of each table summarizes the average GAPs for the entire set of instances.
+Table \ref{tab:ResultadosNSH} provides the average GAPs for the eight Neighborhood Search Heuristics. Meanwhile, Table \ref{tab:Resultados} displays the average GAPs for the other algorithms discussed in this work. Each row in these tables presents the average GAPs across 60 instances, categorized by the number of jobs and machines. The smallest average GAPs are highlighted in bold. The final rows of each table summarizes the average and standard deviation of GAPs for the entire set of instances.
 
 \begin{table}
 \centering % Este comando centraliza a tabela.
@@ -974,7 +969,8 @@ N\_15\_M\_8& 52\%  & 39\%  & 58\%  & 48\%  & 47\%  & \textbf{30\%} & 54\%  & 36\
 N\_30\_M\_2& 90\%  & 87\%  & 91\%  & 90\%  & 89\%  & \textbf{33\%} & 90\%  & 74\%  \\
 N\_30\_M\_4& 75\%  & 64\%  & 77\%  & 72\%  & 70\%  & \textbf{33\%} & 72\%  & 56\%  \\
 N\_30\_M\_8& 60\%  & 44\%  & 63\%  & 57\%  & 54\%  & \textbf{30\%} & 58\%  & 43\%  \\ \hline
-Average    & 71\%  & 64\%  & 74\%  & 70\%  & 65\%  & \textbf{37\%} & 69\%  & 53\%  \\ \hline
+Average    & 71\%  & 64\%  & 74\%  & 70\%  & 65\%  & \textbf{37\%} & 69\%  & 53\%  \\
+Std. deviation   & 15.49\%  & 18.83\%  & 14.34\%  & 16.01\%  & 15.98\%  & 7.83 & 14.9  & 13.39  \\ \hline
 \end{tabular}}
 %}
 {}
@@ -1000,14 +996,15 @@ N\_15\_M\_8  & 37\%& 26\%& \textbf{20\%} & 28\%& 30\%  & 13\%   & 5\%& 37\%   & 
 N\_30\_M\_2  & 79\%& \textbf{26\%} & 69\%& 31\%& 33\%  & 4\%    & 56\%& 43\%   & 77\%\\
 N\_30\_M\_4  & 80\%& \textbf{24\%} & 34\%& 32\%& 33\%  & 10\%   & 15\%& 35\%   & 47\%\\
 N\_30\_M\_8  & 90\%& \textbf{19\%} & 22\%& 30\%& 30\%  & 7\%    & 9\%& 26\%   & 31\%\\ \hline
-Average& 40\%& \textbf{29\%} & 41\%& 36\%& 37\%  & \textbf{17\%}& 27\%& \textbf{37\%}& 53\%\\ \hline
+Average& 40\%& \textbf{29\%} & 41\%& 36\%& 37\%  & \textbf{17\%}& 27\%& \textbf{37\%}& 53\%\\
+Std. deviation & 34.78\%& 8.52\% & 19.28\%& 8.19\%& 7.83\%  & 11.28\% & 19.7\%& 8.05\% & 18.33\%\\ \hline
 \end{tabular}
 %}
 }{}
 \text{(Source: Authors own work)}
 \end{table}
 
-As shown in Table \ref{tab:ResultadosNSH}, NSH 6 consistently delivered the best average performance among all Neighborhood Search Heuristics, achieving an average GAP of 37\%. NSH 6's effectiveness stems from its strategy of applying switching movements to the $L1$ job list and restarting the search process whenever a better solution is discovered. When we compare only the NSH variants, NSH 6 found the best solutions for 386 instances, representing 71\% of the total. NSH 8 followed with 139 instances (26\%), while NSH 2 achieved the best results for 89 instances (16\%). The remaining heuristics, NSH 5, NSH 4, NSH 7, NSH 1, and NSH 3, found the best values for a smaller percentage of instances: 47 (9\%), 41 (8\%), 37 (7\%), 32 (6\%), and 26 (5\%) instances, respectively.
+As shown in Table \ref{tab:ResultadosNSH}, NSH 6 consistently delivered the best average performance among all Neighborhood Search Heuristics, achieving an average GAP of 37\%. NSH 6's effectiveness stems from its strategy of applying switching movements to the $L1$ job list and restarting the search process whenever a better solution is discovered. This performance is reinforced by its standard deviation values, which are markedly lower than those of the other NSH variants. When we compare only the NSH variants, NSH 6 found the best solutions for 386 instances, representing 71\% of the total. NSH 8 followed with 139 instances (26\%), while NSH 2 achieved the best results for 89 instances (16\%). The remaining heuristics, NSH 5, NSH 4, NSH 7, NSH 1, and NSH 3, found the best values for a smaller percentage of instances: 47 (9\%), 41 (8\%), 37 (7\%), 32 (6\%), and 26 (5\%) instances, respectively.
 
 Table \ref{tab:Resultados} presents the GAPs achieved by the PPO-VND and RVND algorithms, showcasing their performance across instances of increasing complexity. For smaller instances (e.g., $n=10$), the Mixed-Integer Linear Programming (MILP) model initially demonstrates superior average GAPs. However, as the instance complexity escalates due to an increased job count, MILP's effectiveness noticeably diminishes. In contrast, algorithms that leverage machine learning, such as PPO-VND and our overarching Framework, exhibit improved performance as instance sizes expand.
 
@@ -1015,9 +1012,9 @@ Furthermore, MILP did outperform other methods in specific smaller instance grou
 
 %In contrast, the hybrid algorithm PPO-VND also showcased its prowess, securing the best average GAP for four groups of instances. Its adaptability was particularly evident in more complex instances, where it achieved the best GAPs for the groups n\_15\_m\_2 (34\%), n\_30\_m\_2 (26\%), n\_30\_m\_4 (24\%), and n\_30\_m\_8 (19\%). This adaptability sparks interest in its potential to handle complex optimization scenarios.
 
-Conversely, the PPO-VND algorithm showcased exceptional scalability and adaptability, clearly differentiating itself as a superior choice for more demanding scenarios. It achieved outstanding GAP results, including 34\% for instances n\_15\_m\_2, 26\% for n\_30\_m\_2, 24\% for n\_30\_m\_4, and an impressive 19\% for the largest and most complex scenarios (n\_30\_m\_8). PPO-VND’s superior adaptability is not merely theoretical; it is practically demonstrated, illustrating its ability to efficiently tackle large-scale optimization challenges.
+Conversely, the PPO-VND algorithm showcased exceptional scalability and adaptability, clearly differentiating itself as a superior choice for more demanding scenarios. It achieved outstanding GAP results, including 34\% for instances n\_15\_m\_2, 26\% for n\_30\_m\_2, 24\% for n\_30\_m\_4, and an impressive 19\% for the largest and most complex scenarios (n\_30\_m\_8). PPO-VND’s superior adaptability is not merely theoretical; it is practically demonstrated, illustrating its ability to efficiently tackle large-scale optimization challenges. The standard deviation results complement this trend, showing that PPO-VND generally maintains low variability compared to RVND.
 
-Analyzing the data presented in Tables \ref{tab:ResultadosNSH} and \ref{tab:Resultados}, it is evident that both NSH 6 and the Framework consistently outperform the RVND meta-heuristic across four distinct instance groups. This observation underscores the significant advantage of selecting a proficient neighborhood structure over random selection, which is characteristic of RVND. Consequently, these findings highlight the pivotal role of intelligent neighborhood selection in the efficacy of these methodologies and their potential to surpass conventional approaches.
+Analyzing the data presented in Tables \ref{tab:ResultadosNSH} and \ref{tab:Resultados}, it is evident that both NSH 6 and the Framework consistently outperform the RVND meta-heuristic across four distinct instance groups. This observation underscores the significant advantage of selecting a proficient neighborhood structure over random selection, which is characteristic of RVND. Consequently, these findings highlight the pivotal role of intelligent neighborhood selection in the efficacy of these methodologies and their potential to surpass conventional approaches. Moreover, standard deviation values reveal that both NSH 6 and the Framework reliably maintain lower dispersion than RVND, reinforcing that systematic or learned neighborhood selection produces more stable results than randomized exploration.
 
 Interestingly, while NSH 6 emerged as the most effective individual Neighborhood Search Heuristic across all datasets, the Framework's performance rivaled or even surpassed NSH 6 in some cases. This provides compelling evidence that employing an algorithm that leverages machine learning to dynamically determine the best heuristic for a specific instance is highly efficient. The Framework's success rate in this experiment was 72\%; in other words, for 391 instances (out of a total of 540), the Framework accurately selected the optimal NSH. The results achieved by the Framework were commendable, and in certain instances, they even surpassed those of the RVND meta-heuristic.
 
@@ -1041,7 +1038,8 @@ N\_15\_M\_8 & 598.07 & 17.61   & 17.68  & 1.54      & 1.13  & 1.83  & 2.23  & 5.
 N\_30\_M\_2 & 600.57 & 146.83  & 300.57 & 12.96     & 10.62 & 16.55 & 20.61 & 82.44  & 10.54 & 18.23 & 19.85 & 63.48 \\
 N\_30\_M\_4 & 600.68 & 167.22  & 354.30 & 15.78     & 12.29 & 19.96 & 24.20 & 100.94 & 12.38 & 21.55 & 23.28 & 69.80 \\
 N\_30\_M\_8 & 601.20 & 269.30  & 469.47 & 19.75     & 16.20 & 24.62 & 32.17 & 113.66 & 17.78 & 27.54 & 30.66 & 88.10 \\ \hline
-Averange    & 581.54 & 69.24   & 130.35 & 5.95      & 4.71  & 7.37  & 9.27  & 34.83  & 4.88  & 8.14  & 8.87  & 26.50 \\ \hline
+Averange    & 581.54 & 69.24   & 130.35 & 5.95      & 4.71  & 7.37  & 9.27  & 34.83  & 4.88  & 8.14  & 8.87  & 26.50 \\
+Std. deviation    & 27.80 & 99.60   & 188.41 & 7.85     & 6.41  & 9.97  & 12.62  & 48.80  & 6.78  & 10.99  & 12.13  & 36.06 \\ \hline
 \end{tabular}}
 }
 {}
@@ -1049,7 +1047,7 @@ Averange    & 581.54 & 69.24   & 130.35 & 5.95      & 4.71  & 7.37  & 9.27  & 34
 \end{table}
 
 
-A holistic evaluation, considering overall GAP outcomes, decisively positions PPO-VND as the top-performing methodology, boasting an exceptional average GAP of 29\%. The framework follows, achieving a GAP of 36\%. NSH 6 ranks third with a GAP of 37\%. The remaining algorithms are classified as follows: MILP (40\%), RVND (41\%), NSH 8 (53\%), NSH 2 (64\%), NSH 5 (65\%), NSH 7 (69\%), NSH 4 (70\%), NSH 1 (71\%), and finally, NSH 3 (74\%).
+A holistic evaluation, considering overall GAP outcomes, decisively positions PPO-VND as the top-performing methodology, boasting an exceptional average GAP of 29\% and standard deviation of 8.52\%. The framework follows, achieving a GAP of 36\%. NSH 6 ranks third with a GAP of 37\%. The remaining algorithms are classified as follows: MILP (40\%), RVND (41\%), NSH 8 (53\%), NSH 2 (64\%), NSH 5 (65\%), NSH 7 (69\%), NSH 4 (70\%), NSH 1 (71\%), and finally, NSH 3 (74\%).
 
 
 To evaluate the percentage of improvement caused by the heuristic relative to the initial solution, the Relative Percentage Improvement (RPI) was calculated. The RPI metric is defined by the equation \ref{eq:RPI}:
@@ -1073,10 +1071,6 @@ Table \ref{tab:ResultadosRPI} presents the RPI(\%) values for all evaluated meth
 \begin{tabular}{|c|ccccccccccc|}
 \hline
  \multirow{2}{*}{Instance} & \multicolumn{11}{|c|}{Relative Percentage Improvement (RPI)}                                                \\ \cline{2-12}
-<<<<<<< HEAD
-=======
- 
->>>>>>> revisoes_r1
 & PPO-VND           & RVND          & Framework & NSH 1 & NSH 2 & NSH 3 & NSH 4 & NSH 5 & NSH 6 & NSH 7 & NSH 8 \\ \hline
 N\_10\_M\_2               & \textbf{80\%} & 74\%          & 76\%      & 31\%  & 36\%  & 21\%  & 30\%  & 53\%  & 76\%  & 48\%  & 67\%  \\
 N\_10\_M\_4               & \textbf{70\%} & 69\%          & 63\%      & 35\%  & 42\%  & 25\%  & 35\%  & 51\%  & 65\%  & 43\%  & 58\%  \\
@@ -1087,7 +1081,8 @@ N\_15\_M\_8               & 59\%          & \textbf{62\%} & 56\%      & 36\%  & 
 N\_30\_M\_2               & \textbf{89\%} & 80\%          & 87\%      & 17\%  & 36\%  & 8\%   & 22\%  & 32\%  & 87\%  & 26\%  & 70\%  \\
 N\_30\_M\_4               & \textbf{73\%} & 70\%          & 68\%      & 17\%  & 40\%  & 9\%   & 23\%  & 35\%  & 68\%  & 29\%  & 53\%  \\
 N\_30\_M\_8               & \textbf{60\%} & 59\%          & 54\%      & 20\%  & 43\%  & 13\%  & 25\%  & 31\%  & 54\%  & 24\%  & 44\%  \\ \hline
-Average                       & \textbf{71\%} & 69\%          & 67\%      & 28\%  & 41\%  & 18\%  & 30\%  & 43\%  & 67\%  & 36\%  & 58\% \\ \hline
+Average                   & \textbf{71\%} & 69\%          & 67\%      & 28\%  & 41\%  & 18\%  & 30\%  & 43\%  & 67\%  & 36\%  & 58\% \\
+Std. deviation & 11.5\%     & 7.7\%     & 12.8\%  & 8.4\%  & 4.3\% & 7.3\% & 6.2\%  & 8.9\%  & 12.5\%  & 8.7\%  & 10.4\% \\ \hline
 \end{tabular}}
 {}
 \text{(Source: Authors own work)}
